--- a/package.json
+++ b/package.json
@@ -9,6 +9,26 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.8",
+    "animate.css": "^4.1.1",
     "astro": "^5.8.1"
-  }
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8"
+  },
+  "description": "```sh npm create astro@latest -- --template basics ```",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LuisGomez11/luisgomezdev-portfolio.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LuisGomez11/luisgomezdev-portfolio/issues"
+  },
+  "homepage": "https://github.com/LuisGomez11/luisgomezdev-portfolio#readme"
 }
