--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "astro": "^5.8.1"
   },
   "devDependencies": {
